@@ -1,3 +1,6 @@
+2007-05-16  David Bruehlmeier <typo3@bruehlmeier.com> 
+	* Added static_markets to $TYPO3_CONF_VARS['EXTCONF'][STATIC_INFO_TABLES_EXTkey]['tables']
+
 2007-04-24  Franz Holzinger  <kontakt@fholzinger.com>
 	* adapt manual for market places
 
